kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      serviceAccountName: monitoring
      containers:
      - name: web-server
        image: python:3.12-alpine
        lifecycle:
          preStop:
            exec: 
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
        command: ["/bin/sh", "-c", "python -m http.server 8000 -d /homework"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-data
          mountPath: "/homework"
        - name: config-volume
          mountPath: "/homework/conf/"
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: dynamic-pvc-web
      - name: config-volume
        configMap:
          name: cm-app
