kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
          - path: /conf/file
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
